--- a/package.json
+++ b/package.json
@@ -29,5 +29,9 @@
 		"prettier": "^3.5.3",
 		"tsx": "^4.19.3",
 		"typescript": "^5.8.2"
+	},
+	"dependencies": {
+		"@bracketed/logger": "^1.0.12",
+		"@sapphire/snowflake": "^3.5.5"
 	}
 }
